tests/error/tracing_errors/array_incoherent_tys.err
Error: Type error in function return (at $FILE:9:0)
   | 
 7 | 
 8 | @guppy.comptime(module)
 9 | def test(xs: array[int, 10]) -> None:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10 |     xs[1] = 1.0
   | ^^^^^^^^^^^^^^^

Borrowed argument `xs` cannot be returned back to the caller. Element at index 1
does not match the type of previous elements. Expected `int`, got `float`.

Guppy compilation failed due to 1 previous error
